--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0"
 validator = { version = "0.17", features = ["derive"] }
 actix-web-validator = "5.0.1"
 chrono = { version = "0.4.34", features = ["serde"] }
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
 
 [dependencies.uuid]
 version = "1.7.0"
